data/derived/comb/progs/unify/prog6576.ml.out
Characters 199-204:
  let args = (List.combine (List.rev l1) (List.rev l2))::(0,0) in
                                                         ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list list
